SF-IMP-0082: preserve deterministic explicit warmup order